test/fails/bad_generics/bounds1.lgl
bool uninvokable<t : vec2>(t x) {
    return x && true;
}

void main() {
    bool fail = uninvokable<bool>(true); // Fails the bounds
}